2009-10-08  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Added support for a parameter setting the button that was
        pressed in the mouseDown function.
        https://bugs.webkit.org/show_bug.cgi?id=30220

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

Canonical link: https://commits.webkit.org/40877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49318 268f45cc-cd09-0410-ab3c-d52691b4dbfc